Bug 1329520 - Fix "memory/mozalloc/throw_gcc.h:35:1: note: declaration missing '[[noreturn]]' (libc++ 4.0)" r=nfroyd a=jcristau

--HG--
extra : rebase_source : 083607205389b1cf4d35c9db07386d47290b7c92
extra : source : 3b96baf833a5a508b9d4b578b4aabd25b918b0c2